Tweaked to allow layer sizes to be individually specified.
Trained article scoring bot and results added to repository to allow results to be reproduced.